--- a/app/scss/components/search.scss
+++ b/app/scss/components/search.scss
@@ -5,6 +5,17 @@
 	opacity: 0;
 	visibility: hidden;
 	transition: opacity .3s;
+	
+	@media (max-width: 1265px) {
+		top: 57px;
+	}
+
+	@media (max-width: 715px) {
+		position: fixed;
+		left: 0;
+		top: 60px;
+		width: 100%;
+	}
 
 	&.active {
 		opacity: 1;
@@ -21,6 +32,10 @@
 		justify-content: center;
 		padding: 10px;
 		border-top: 1px solid #e12121;
+
+		@media (max-width: 715px) {
+			width: 100%;
+		}
 	}
 
 	// .search__form-text
@@ -40,5 +55,10 @@
 		text-transform: uppercase;
 		font-weight: 600;
 		margin-left: 10px;
+		transition: color .3s;
+
+		&:hover {
+			color: #e12121;
+		}
 	}
 }
