--- a/app/scss/components/basket.scss
+++ b/app/scss/components/basket.scss
@@ -18,6 +18,10 @@
 			width: 1px;
 			right: 0;
 			top: 0;
+
+			@media (max-width: 600px) {
+				display: none;
+			}
 		}
 
 		&:hover .basket__setting-icon{
@@ -37,6 +41,22 @@
 		cursor: pointer;
 		color: #888888;
 
+		@media (max-width: 1265px) {
+			padding: 20px 15px;
+		}
+
+		@media (max-width: 1150px) {
+			padding: 20px 10px;
+		}
+
+		@media (max-width: 600px) {
+			padding: 20px;
+		}
+
+		@media (max-width: 380px) {
+			padding: 20px 10px;
+		}
+
 		&.active {
 			color: #e12121;
 		}
@@ -45,10 +65,26 @@
 			font-size: 13px;
 			font-weight: 400;
 			margin: 0px 7px 0px 7px;
+
+			@media (max-width: 600px) {
+				display: none;
+			}
 		}
 
 		i {
 			font-size: 19px;
+
+			@media (max-width: 600px) {
+				font-size: 22px;
+
+				&:last-child {
+					display: none;
+				}
+			}
+
+			@media (max-width: 380px) {
+				font-size: 20px;
+			}
 		}
 
 	}
@@ -64,11 +100,43 @@
 		padding: 20px;
 		display: flex;
 		cursor: pointer;
+		color: #888888;
+
+		@media (max-width: 1265px) {
+			padding: 20px 15px;
+		}
+
+		@media (max-width: 1150px) {
+			padding: 20px 10px;
+		}
+
+		@media (max-width: 600px) {
+			padding: 20px;
+		}
+
+		@media (max-width: 600px) {
+			padding: 20px 10px;
+		}
+
+		&:hover i{
+			color: #e12121;
+		}
+
+		&.active {
+			color: #e12121;
+		}
 		
 		i {
 			margin: 0px 8px 0px 0px;
-			color: #888888;
 			font-size: 19px;
+
+			@media (max-width: 600px) {
+				font-size: 22px;
+			}
+
+			@media (max-width: 380px) {
+				font-size: 20px;
+			}
 		}
 	}
 
@@ -79,6 +147,10 @@
 		font-size: 13px;
 		font-weight: 400;
 		line-height: 20px;
+
+		@media (max-width: 600px) {
+			display: none;
+		}
 		
 		span {
 			color: #e12020;
