--- a/app/scss/components/menu.scss
+++ b/app/scss/components/menu.scss
@@ -1,17 +1,17 @@
 .menu {
+	display: flex;
 	flex: 1 1 auto;
 	
-	@media (max-width: 1260px) {
+	@media (max-width: 1060px) {
 		position: fixed;
 		top: 0;
 		left: 0;
 		width: 100%;
 		height: 100%;
-		overflow: auto;
 		display: flex;
-		align-items: center;
 		justify-content: center;
-		text-align: center;
+		align-items: center;
+		overflow: auto;
 		background-color: rgba(#000, .8);
 		transform: translateY(-100%);
 		transition: transform 0.6s ease 0s;
@@ -27,7 +27,7 @@
 		position: relative;
 		z-index: 3;
 
-		@media (max-width: 1260px) {
+		@media (max-width: 1060px) {
 			display: block;
 		}
 	}
@@ -48,7 +48,7 @@
 			width: 1px;
 			left: 0;
 
-			@media (max-width: 1260px) {
+			@media (max-width: 1060px) {
 				display: none;
 			}
 		}
@@ -63,7 +63,7 @@
 			width: 1px;
 			right: 0;
 
-			@media (max-width: 1260px) {
+			@media (max-width: 1060px) {
 				display: none;
 			}
 		}
@@ -80,11 +80,42 @@
 		padding: 20px;
 		text-transform: uppercase;
 
-		@media (max-width: 1260px) {
+		@media (max-width: 1265px) {
+			padding: 20px 15px;
+			font-size: 15px;
+		}
+
+		@media (max-width: 1150px) {
+			padding: 20px 10px;
+			font-size: 14px;
+		}
+
+		@media (max-width: 1060px) {
 			color: #fff;
 		}
 
+		@media (max-width: 600px) {
+			padding: 20px;
+			font-size: 22px;
+		}
+
+		@media (max-width: 380px) {
+			padding: 20px 10px;
+			font-size: 20px;
+		}
+
 		&:hover {
+			color: #e12121;
+		}
+	}
+
+	&__link-btn {
+
+		@media (max-width: 1060px) {
+			color: #888888;
+		}
+		
+		&.active {
 			color: #e12121;
 		}
 	}
@@ -190,6 +221,7 @@
 		font-size: 19px;
 		background: transparent;
 		position: relative;
+		z-index: 3;
 		cursor: pointer;
 	}
 
@@ -235,7 +267,7 @@
 	&__burger {
 		display: none;
 
-		@media (max-width: 1260px) {
+		@media (max-width: 1060px) {
 			display: block;
 			position: absolute;
 			width: 30px;
@@ -275,6 +307,7 @@
 			&.active::before{
 				transform: rotate(45deg);
 				top: 9px;
+				background-color: #e12121;
 			}
 			&.active span {
 				transform: scale(0);
@@ -282,6 +315,7 @@
 			&.active::after{
 				transform: rotate(-45deg);
 				bottom: 9px;
+				background-color: #e12121;
 			}
 		}
 
