--- a/app/scss/components/setting.scss
+++ b/app/scss/components/setting.scss
@@ -5,9 +5,19 @@
 	width: 460px;
 	border-top: 1px solid #e12121;
 	opacity: 0;
+	overflow-x: hidden;
+	overflow-y: auto;
 
  	visibility: hidden;
 	transition: opacity .3s, visibility .3s;
+
+	@media (max-width: 600px) {
+		position: fixed;
+		left: 0;
+		top: 60px;
+		width: 100%;
+		height: 100%;
+	}
 
 	&.active {
 		opacity: 1;
@@ -18,6 +28,10 @@
 
 	&__row {
 		display: flex;
+
+		@media (max-width: 500px) {
+			flex-direction: column;
+		}
 	}
 
 	// .setting__column
@@ -36,6 +50,7 @@
 		}
 		&--white {
 			background: #fff;
+			padding: 30px 30px 100px 30px;
 		}
 	}
 
@@ -52,12 +67,6 @@
 	&__form-password {
 		padding: 7px;
 		margin: 0px 0px 20px 0px;
-	}
-
-	// .setting__form-password
-
-	&__form-password {
-
 	}
 
 	// .setting__form-label
@@ -135,8 +144,7 @@
 		height: 30px;
 		width: 30px;
 		text-align: center;
-		line-height: 30px;
-		vertical-align: middle;
+		line-height: 31px;
 		border: 1px solid transparent;
 
 		&:hover {
@@ -172,23 +180,11 @@
 			margin: 0px 3px 0px 0px;
 		}
 	}
-
 	// .setting__currency-link
 
 	&__currency-link {
 		color: #888888;
 	}
-
-	// .setting__nav
-
-	&__nav {
-	}
-
-	// .setting__nav-list
-
-	&__nav-list {
-	}
-
 	// .setting__nav-item
 
 	&__nav-item {
