--- a/app/scss/components/wallet.scss
+++ b/app/scss/components/wallet.scss
@@ -15,6 +15,13 @@
  	visibility: hidden;
 	transition: opacity .3s, visibility .3s;
 
+	@media (max-width: 600px) {
+		right: 0;
+		position: fixed;
+		width: 100%;
+		padding: 30px 20px 100px 20px;
+	}
+
 	&.active {
 		opacity: 1;
 		visibility: visible;
@@ -26,18 +33,30 @@
 		border-bottom: 1px solid #888888;
 		margin: 0px 0px 15px 0px;
 		padding: 0px 0px 15px 0px;
+
+		&:hover {
+			.wallet__cart-title {
+				color: #e12121;
+			}
+		}
 	}
 
 	// .wallet__cart-img
 
 	&__cart-img {
+		margin: 0px 10px 0px 0px;
+		padding: 5px 0px;
+		height: 70px;
+		width: 100%;
+    	max-width: 70px;
+		background: #fff;
+		border-radius: 10px;
+
 		img {
-			height: 70px;
-			width: 70px;
-			object-fit: cover;
+			width: 100%;
+			height: 100%;
+			object-fit: contain;
 			object-position: center;
-			border-radius: 10px;
-			margin: 0px 10px 0px 0px;
 		}
 	}
 
@@ -48,6 +67,7 @@
 		color: #888888;
 		display: flex;
 		flex-direction: column;
+		width: 100%;
 	}
 
 	// .wallet__cart-title
@@ -113,7 +133,7 @@
 
 	&__buttons-btn {
 		flex: 0 1 45%;
-		padding: 15px 20px;
+		padding: 13px 16px;
 		border-radius: 20px;
 		text-transform: uppercase;
 		white-space: nowrap;
