Add img for sidebar-nav

--- a/app/scss/components/setting.scss
+++ b/app/scss/components/setting.scss
@@ -43,7 +43,7 @@
 		padding: 30px;
 
 		&--black {
-			background: url(../../img/basket__setting/bg_setting.webp), #000;
+			background: url(../img/basket__setting/bg_setting.webp), #000;
 			background-position: bottom;
 			background-size: contain;
 			background-repeat: no-repeat;
