--- a/app/scss/blocks/main-slider.scss
+++ b/app/scss/blocks/main-slider.scss
@@ -2,6 +2,10 @@
 	position: relative;
 	top: 30px;
 
+	@media (max-width: 768px) {
+		top: 20px;
+	}
+
 	// .main-slider__image
 
 	&__image {
@@ -10,11 +14,11 @@
 		overflow: hidden;
 		background-color: rgba(0, 0, 0, 0.1);
 
-		@media (max-width: 1400px) {
+		@media (max-width: 1500px) {
 			padding: 0px 0px 10% 0px;
 		}
 
-		@media (max-width: 1000px) {
+		@media (max-width: 1366px) {
 			padding: 0px 0px 0% 0px;
 		}
 
