--- a/app/scss/components/cart.scss
+++ b/app/scss/components/cart.scss
@@ -10,7 +10,7 @@
 	}
 
 	&:hover {
-		box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+		box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 
 		.cart__overlay {
 			overflow: visible;
@@ -78,6 +78,7 @@
 	&__body-header {
 		display: flex;
 		justify-content: space-between;
+		align-items: center;
 		margin: 0px 0px 16px 0px;
 
 		@media (max-width: 1366px) {
@@ -142,21 +143,15 @@
 	// .cart__body-descr
 
 	&__body-title {
+		display: block;
 		color: #888888;
 		font-weight: 400;
 		font-size: 16px;
+		line-height: 22px;
 		text-transform: uppercase;
 		margin: 0px 0px 23px 0px;
+		padding: 0px 5px 0px 0px;
 		transition: color .3s;
-		width: 100%;
-		height: calc(22px * 2);
-
-		overflow: hidden;
-		line-height: 22px;
-
-		display: -webkit-box;
-		-webkit-line-clamp: 2;
-		-webkit-box-orient: vertical; 
 
 		@media (max-width: 1366px) {
 			margin: 0px 0px 15px 0px;
@@ -165,13 +160,31 @@
 		}
 
 		&:hover {
-			color: #e12020;
+			color: #333333;
+		}
+
+		&:hover span::before {
+			background: #333333;
 		}
 	}
 
 	&__body-price {
+		display: inline-block;
 		color: #e12020;
 		font-weight: 600;
+		position: relative;
+		padding: 0px 0px 0px 5px;
+
+		&::before {
+			content: "";
+			position: absolute;
+			height: 13px;
+			width: 1px;
+			background: #888888;
+			left: 0;
+			top: 3px;
+			transition: background .3s;
+		}
 	}
 
 	// .cart__body-footer
