--- a/app/scss/components/slider.scss
+++ b/app/scss/components/slider.scss
@@ -23,6 +23,19 @@
 	background-color: rgba(0, 0, 0, .3);
 	top: 50%;
 	transform: translateY(-50%);
+
+	@media (max-width: 1700px) {
+		top: 45%;
+	}
+
+	@media (max-width: 1600px) {
+		top: 43%;
+	}
+
+	@media (max-width: 1500px) {
+		width: 40px;
+		height: 40px;
+	}
 }
 
 .slick-prev:before, 
@@ -80,7 +93,6 @@
 	justify-content: center;
 	z-index: 10;
 	bottom: 50px;
-	margin: 0px 0px 10px 0px;
 
 	@media (max-width: 480px) {
 		bottom: 30px;
@@ -118,7 +130,7 @@
   featured__slider
 ========================================================================== */
 .featured__slider .slick-prev {
-	left: 10px;
+	left: 25px;
 }
 
 .featured-product__slider .slick-prev {
@@ -126,7 +138,7 @@
 }
 
 .featured__slider .slick-next {
-	right: 10px;
+	right: 25px;
 }
 
 .featured-product__slider .slick-next{
