--- a/app/scss/components/slider.scss
+++ b/app/scss/components/slider.scss
@@ -129,6 +129,10 @@
 /* ==========================================================================
   featured__slider
 ========================================================================== */
+.featured__slider .lick-track {
+	display: flex;
+}
+
 .featured__slider .slick-prev {
 	left: 25px;
 }
