--- a/app/scss/blocks/newsletter.scss
+++ b/app/scss/blocks/newsletter.scss
@@ -148,6 +148,7 @@
 		font-size: 13px;
 		font-weight: 600;
 		text-transform: uppercase;
+		transition: background-color .3s;
 
 		@media (max-width: 950px) {
 			padding: 14px 24px;
@@ -157,6 +158,10 @@
 		@media (max-width: 450px) {
 			padding: 14px 25px;
 			white-space: nowrap;
+		}
+
+		&:hover {
+			background-color: #e12020;
 		}
 	}
 }
