--- a/app/scss/blocks/policy.scss
+++ b/app/scss/blocks/policy.scss
@@ -1,13 +1,9 @@
 .policy {
-
+	position: relative;
 	
 	&--black {
 		padding: 80px 0px;
 		background-color: rgba(0, 0, 0, 1);
-		background-image: url(../img/policy/overlay.png);
-		background-position: center;
-		background-size: cover;
-		background-repeat: no-repeat;
 
 		@media (max-width: 1366px) {
 			padding: 60px 0px;
@@ -31,7 +27,7 @@
 		padding: 0;
 
 		.policy__item {
-			padding: 50px 30px 50px 30px;
+			padding: 50px 0px 50px 30px;
 
 			&::after {
 				content: "";
@@ -51,10 +47,19 @@
 		}
 	}
 
+	&__bg {
+		position: absolute;
+		height: 100%;
+		width: 100%;
+		left: 0;
+		top: 0;
+	}
 
 	// .policy__row
 
 	&__row {
+		position: relative;
+		z-index: 3;
 		display: flex;
 		flex-flow: row wrap;
 		justify-content: center;
