--- a/app/scss/blocks/testimonials.scss
+++ b/app/scss/blocks/testimonials.scss
@@ -1,22 +1,13 @@
 .testimonials {
 	position: relative;
 	padding: 80px 0px;
-	background: url(../../img/testimonial/bg01.webp);
-	background-position: 50% -25%;
-	background-repeat: no-repeat;
 
 	@media (max-width: 1366px) {
 		padding: 60px 0px;
-		background-position: 50% -5%;
-	}
-
-	@media (max-width: 1200px) {
-		background-position: 50% -23%;
 	}
 
 	@media (max-width: 1000px) {
 		padding: 50px 0px;
-		background-position: 50% -4%;
 	}
 
 	@media (max-width: 768px) {
@@ -27,20 +18,41 @@
 		padding: 30px 0px 50px;
 	}
 
-	@media (max-width: 350px) {
-		background-position: 50% -23%;
+	&__bg {
+		position: absolute;
+		height: 100%;
+		width: 100%;
+		left: 0;
+		top: 0;
 	}
-	// .testimonials__main-title
 
-	&__main-title {
+	.ibg {
+		background-position: 50% 10%;
+		background-repeat: no-repeat;
+	
+		@media (max-width: 1200px) {
+			background-position: 50% 3%;
+		}
+	
+		@media (max-width: 900px) {
+			background-position: 50% -15%;
+		}
+
+		@media (max-width: 650px) {
+			background-size: auto;
+			background-position: 50% 0%;
+		}
+	
+		@media (max-width: 400px) {
+			background-position: 50% -25%;
+		}
 	}
-
 	// .testimonials__slider
 
 	&__slider {
 		margin: 0px -15px;
 
-		@media (max-width: 768px) {
+		@media (max-width: 800px) {
 			margin: 0px -10px;
 		}
 	}
@@ -49,9 +61,9 @@
 
 	&__slider-item {
 		border-radius: 5px;
-		padding: 0px 15px;
+		padding: 10px 15px 0 15px;
 
-		@media (max-width: 768px) {
+		@media (max-width: 800px) {
 			padding: 10px 0px;
 		}
 
@@ -66,7 +78,7 @@
 			padding: 20px;
 		}
 
-		@media (max-width: 768px) {
+		@media (max-width: 800px) {
 			padding: 10px;
 		}
 
