--- a/app/scss/components/countdown.scss
+++ b/app/scss/components/countdown.scss
@@ -1,11 +1,25 @@
 .countdown {
 	color: #333333;
 	padding: 10px 20px;
-	width: 269px;
+	width: 100%;
+	max-width: 269px;
 	border-radius: 5px;
 	border: 2px solid #333333;
 	background-color: #ffffff;
 	display: flex;
+	justify-content: center;
+
+	@media (max-width: 1400px) {
+		padding: 10px 10px;
+	}
+
+	@media (max-width: 1200px) {
+		padding: 10px 5px;
+	}
+
+	@media (max-width: 1050px) {
+		padding: 10px 10px;
+	}
 
 	&__number {
 		display: flex;
@@ -15,6 +29,22 @@
 	&__time {
 		font-size: 30px;
 		font-weight: 800;
+
+		@media (max-width: 1400px) {
+			font-size: 28px;
+		}
+
+		@media (max-width: 1250px) {
+			font-size: 25px;
+		}
+
+		@media (max-width: 1200px) {
+			font-size: 20px;
+		}
+
+		@media (max-width: 1050px) {
+			font-size: 25px;
+		}
 	}
 
 	&__text {
