--- a/app/scss/components/sidebar-new.scss
+++ b/app/scss/components/sidebar-new.scss
@@ -4,18 +4,50 @@
 	&__item {
 		display: flex;
 		margin: 0px 0px 20px 0px;
+
+		&:hover {
+			.sidebar-new__item-title {
+				color: #000;
+
+				span::before {
+					background: #000;
+				}
+			}
+		}
 	}
 
 	// .sidebar-new__item-img
 
 	&__item-img {
 		margin: 0px 10px 0px 0px;
+		padding: 10px;
+		background: #fff;
+
+		@media (max-width: 1500px) {
+			margin: 0px 5px 0px 0px;
+			padding: 5px;
+		}
+
+		@media (max-width: 768px) {
+			margin: 0px 10px 0px 0px;
+			padding: 10px;
+		}
 
 		img {
 			width: 90px;
 			height: 90px;
     		object-fit: contain;
 			border-radius: 5px;
+
+			@media (max-width: 1500px) {
+				width: 80px;
+				height: 80px;
+			}
+
+			@media (max-width: 768px) {
+				width: 90px;
+				height: 90px;
+			}
 		}
 	}
 
@@ -26,11 +58,35 @@
 		line-height: 22px;
 		font-weight: 400;
 		font-size: 16px;
+		transition: color .3s;
+
+		@media (max-width: 1500px) {
+			line-height: 20px;
+    		font-size: 14px;
+		}
+
+		@media (max-width: 768px) {
+			line-height: 22px;
+			font-size: 16px;
+		}
 
 		span {
+			position: relative;
 			color: #e12020;
 			text-transform: uppercase;
 			font-weight: 600;
+			padding: 0px 0px 0px 7px;
+
+			&::before {
+				content: "";
+				position: absolute;
+				height: 13px;
+				width: 1px;
+				background: #888888;
+				left: 0;
+				top: 3px;
+				transition: background .3s;
+			}
 		}
 	}
 }
