--- a/app/scss/blocks/shop-col.scss
+++ b/app/scss/blocks/shop-col.scss
@@ -86,7 +86,8 @@
 	&__content-product,
 	&__content-sponsor,
 	&__content-featured,
-	&__content-information {
+	&__content-information,
+	&__sidebar-news {
 		margin: 0px 0px 50px 0px;
 	}
 	
