--- a/app/scss/blocks/policy.scss
+++ b/app/scss/blocks/policy.scss
@@ -24,26 +24,21 @@
 
 	&--white {
 		background-color: #fff;
-		padding: 0;
+		padding: 50px 0px;
+
+		@media (max-width: 1366px) {
+			padding: 40px 0px;
+		}
+	
+		@media (max-width: 550px) {
+			padding: 20px 0;
+		}
 
 		.policy__item {
-			padding: 50px 0px 50px 30px;
-
+			
 			&::after {
-				content: "";
-				position: absolute;
-				right: 0;
-				top: 0;
-				width: 1px;
-				height: 100%;
 				background-color: #000000;
 			}
-		}
-		.policy__row {
-			margin: 0;
-		}
-		.policy__column {
-			padding: 0;
 		}
 	}
 
@@ -248,8 +243,17 @@
 		text-decoration: underline;
 		transition: color .3s;
 
-		&:hover {
-			color: #ffffff;
+		&--white {
+			&:hover {
+				color: #da4b4b;
+			}
 		}
+
+		&--black {
+			&:hover {
+				color: #ffffff;
+			}
+		}
+
 	}
 }
