--- a/app/scss/components/tabs.scss
+++ b/app/scss/components/tabs.scss
@@ -39,4 +39,19 @@
 		}
 	}
 
+	&__container-title {
+		color: #333333;
+		font-weight: 600;
+		font-size: 19px;
+		margin: 0px 0px 10px 0px;
+	}
+
+	&__container-list {
+
+		li {
+			list-style: inside;
+			margin: 0px 0px 5px 0px;
+		}
+	}
+
  }
