--- a/app/scss/blocks/featured.scss
+++ b/app/scss/blocks/featured.scss
@@ -21,6 +21,8 @@
 
 	&__slider{
 		margin: 0px -15px;
+
+		display: flex;
 	} 
 
 	// .featured__slider-item
@@ -29,5 +31,7 @@
 		padding: 10px 15px 0 15px;
 	}
 	// .featured__cart
+
+
 
 }
