--- a/app/scss/components/quantity.scss
+++ b/app/scss/components/quantity.scss
@@ -49,7 +49,8 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	
+	font-size: 22px;
+	font-weight: 800;
  }
  
  .quantity-button.quantity-up {
