--- a/app/scss/blocks/detail.scss
+++ b/app/scss/blocks/detail.scss
@@ -1,7 +1,7 @@
 .detail {
 	padding: 50px 0px 90px;
 
-	@media (max-width: 768px) {
+	@media (max-width: 1000px) {
 		padding: 20px 0 20px;
 	}
 
@@ -11,7 +11,7 @@
 		display: flex;
 		margin: 0px -15px;
 
-		@media (max-width: 768px) {
+		@media (max-width: 1000px) {
 			flex-direction: column;
 		}
 	}
@@ -24,11 +24,18 @@
 		min-width: 0;
 		display: flex;
 		flex-direction: column;
-	}
 
-	// .detail__content-popular
+		@media (max-width: 1000px) {
+			margin: 50px 0px 0px 0px;
+		}
 
-	&__content-popular {
+		@media (max-width: 768px) {
+			margin: 30px 0px 0px 0px;
+		}
+
+		@media (max-width: 480px) {
+			margin: 25px 0px 0px 0px;
+		}
 	}
 
 	// .detail__sidebar
@@ -40,14 +47,9 @@
 		display: flex;
 		flex-direction: column;
 		
-		@media (max-width: 768px) {
-			margin: 50px 0px 0px 0px;
+		@media (max-width: 1000px) {
 			flex-flow: row wrap;
 			justify-content: space-between;
-
-			&>div {
-				flex: 0 1 48%;
-			}
 		}
 
 		@media (max-width: 560px) {
@@ -59,8 +61,45 @@
 	&__content-new,
 	&__content-tabs {
 		margin: 0px 0px 50px 0px;
+
+		@media (max-width: 1000px) {
+			flex: 0 1 48%;
+		}
+
+		@media (max-width: 768px) {
+			margin: 0 0 35px 0;
+		}
+
+		@media (max-width: 480px) {
+			margin: 0 0 25px 0;
+		}
 	}
+
+	&__content-block {
+
+		@media (max-width: 1000px) {
+			flex: 0 1 100%;
+
+			img {
+				height: 180px;
+			}
+		}
+	}
+
 	&__content-cart {
 		margin: 0px 0px 45px 0px;
+
+		@media (max-width: 1000px) {
+			flex: 0 1 48%;
+		}
+
+		@media (max-width: 768px) {
+			margin: 0 0 35px 0;
+		}
+
+		@media (max-width: 480px) {
+			margin: 0 0 25px 0;
+		}
 	}
+
 }
