--- a/app/scss/components/breadcrumbs.scss
+++ b/app/scss/components/breadcrumbs.scss
@@ -5,6 +5,10 @@
 		padding: 22px 0px;
 		display: flex;
 		border-bottom: 1px solid #dddddd;
+
+		@media (max-width: 700px) {
+			flex-direction: column;
+		}
 	}
 
 	// .breadcrumbs__item
@@ -13,6 +17,10 @@
 		font-size: 13px;
 		font-weight: 400;
 		color: #333333;
+
+		&:not(:last-child) {
+			margin: 0px 0px 10px 0px;
+		}
 	}
 
 	// .breadcrumbs__link
