--- a/app/scss/components/cart-detail.scss
+++ b/app/scss/components/cart-detail.scss
@@ -6,11 +6,20 @@
 	@media (max-width: 1366px) {
 		padding: 20px;
 	}
+
+	@media (max-width: 768px) {
+		padding: 15px;
+	}
 	// .cart-detail__row
 
 	&__row {
 		display: flex;
 		margin: 0px -15px;
+
+		@media (max-width: 768px) {
+			flex-direction: column;
+			margin: -15px 0px;
+		}
 	}
 
 	// .cart-detail__images
@@ -23,12 +32,28 @@
 		@media (max-width: 1550px) {
 			flex: 0 1 30%;
 		}
+
+		@media (max-width: 1300px) {
+			flex: 0 1 40%;
+		}
+
+		@media (max-width: 1200px) {
+			flex: 0 1 36%;
+		}
+
+		@media (max-width: 1000px) {
+			flex: 0 1 50%;
+		}
+
+		@media (max-width: 768px) {
+			padding: 15px 0px;
+		}
 	}
 
 	// .cart-detail__slider
 
 	&__slider {
-		max-width: 570px;
+		max-width: 100%;
 	}
 
 	// .cart-detail__slider-item
@@ -43,6 +68,14 @@
 
 			@media (max-width: 1366px) {
 				height: 450px;
+			}
+
+			@media (max-width: 768px) {
+				height: 350px;
+			}
+
+			@media (max-width: 500px) {
+				height: 300px;
 			}
 		}
 	}
@@ -78,6 +111,22 @@
 		@media (max-width: 1550px) {
 			flex: 0 1 70%;
 		}
+
+		@media (max-width: 1300px) {
+			flex: 0 1 60%;
+		}
+
+		@media (max-width: 1200px) {
+			flex: 0 1 64%;
+		}
+
+		@media (max-width: 1000px) {
+			flex: 0 1 50%;
+		}
+
+		@media (max-width: 768px) {
+			padding: 15px 0px;
+		}
 	}
 
 	// .cart-detail__title
@@ -94,6 +143,15 @@
 			font-size: 28px;
 			margin: 0px 0px 10px 0px;
 		}
+
+		@media (max-width: 768px) {
+			font-size: 26px;
+		}
+
+		@media (max-width: 350px) {
+			font-size: 20px;
+			line-height: 24px;
+		}	
 	}
 
 	// .cart-detail__rating
@@ -102,6 +160,10 @@
 		display: flex;
 		align-items: baseline;
 		margin: 0px 0px 20px 0px;
+
+		@media (max-width: 768px) {
+			margin: 0px 0px 15px 0px;
+		}
 	}
 
 	// .cart-detail__rating-list
@@ -127,13 +189,6 @@
 			color: #e2bc0a;
 		}
 	}
-
-	// .cart-detail__rating-icon
-
-	&__rating-icon {
-		
-	}
-
 	// .cart-detail__rating-reviews
 
 	&__rating-reviews {
@@ -189,6 +244,11 @@
 			padding: 0px 0 20px 0;
 		}
 
+		@media (max-width: 768px) {
+			margin: 0 0 15px 0;
+			padding: 0px 0 15px 0;
+		}
+
 		span {
 			color: #2ea31b;
 		}
@@ -209,6 +269,11 @@
 			margin: 0px 0 20px 0;
 			padding: 0px 0 20px 0;
 		}
+
+		@media (max-width: 768px) {
+			margin: 0 0 15px 0;
+			padding: 0px 0 15px 0;
+		}
 	}
 
 	&__colors-title {
@@ -217,6 +282,10 @@
 		font-weight: 600;
 		text-transform: uppercase;
 		margin: 0px 0px 20px 0px;
+
+		@media (max-width: 768px) {
+			margin: 0px 0px 15px 0px;
+		}
 	}
 
 	// .cart-detail__color-list
@@ -226,6 +295,11 @@
 		margin: 0px 0px 30px 0px;
 		padding: 0px 0px 30px 0px;
 		border-bottom: 1px solid #dddddd;
+
+		@media (max-width: 768px) {
+			margin: 0px 0px 15px 0px;
+			padding: 0px 0px 15px 0px;
+		}
 	}
 
 	&__colors-color {
@@ -282,6 +356,26 @@
 		@media (max-width: 1366px) {
 			margin: 0 0 40px 0;
 		}
+
+		@media (max-width: 768px) {
+			margin: 0 0 20px 0;
+		}
+
+		&--1 {
+
+			@media (max-width: 500px) {
+				flex-flow: row wrap;
+			}
+		}
+
+		&--2 {
+			flex-direction: column;
+			align-items: flex-start;
+
+			&>div:not(:last-child) {
+				margin: 0px 0px 10px 0px;
+			}
+		}
 	}
 
 	// .cart-detail__actions-quantity
@@ -293,6 +387,11 @@
 		color: #888888;
 		font-size: 13px;
 		font-weight: 400;
+
+		@media (max-width: 500px) {
+			flex: 0 1 100%;
+			margin: 0px 0px 10px 0px;
+		}
 	}
 
 	// .cart-detail__actions-btn
@@ -316,6 +415,13 @@
 	&__actions-like {
 		display: flex;
 		align-items: center;
+
+		@media (max-width: 1300px) {
+
+			span {
+				display: none;
+			}
+		}
 	}
 
 	// .cart-detail__actions-like
