--- a/app/scss/components/tabs.scss
+++ b/app/scss/components/tabs.scss
@@ -3,6 +3,10 @@
 
 	&__nav {
 		display: flex;
+
+		@media (max-width: 550px) {
+			flex-direction: column;
+		}
 	 }
 	 
 	&__nav-item {
@@ -15,6 +19,10 @@
 
 		&:not(:last-child) {
 			margin: 0px 50px 0px 0px;
+
+			@media (max-width: 550px) {
+				margin: 0px 0px 10px 0px;
+			}
 		}
 
 		&.active,
