--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,6 +1,6 @@
 // Fonts
-@import url(https://fonts.googleapis.com/css?family=Lato:400,700);
-@import url(https://fonts.googleapis.com/css?family=Poppins:300,400,600);
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
 // Mixins
 @import "mixins/adaptive-font";
