--- a/app/scss/blocks/detail.scss
+++ b/app/scss/blocks/detail.scss
@@ -62,16 +62,17 @@
 	&__content-tabs {
 		margin: 0px 0px 50px 0px;
 
-		@media (max-width: 1000px) {
-			flex: 0 1 48%;
+		@media (max-width: 1400px) {
+			margin: 0px 0px 40px 0px;
 		}
 
-		@media (max-width: 768px) {
-			margin: 0 0 35px 0;
+		@media (max-width: 1000px) {
+			flex: 0 1 48%;
+			margin: 0 0 30px 0;
 		}
 
 		@media (max-width: 480px) {
-			margin: 0 0 25px 0;
+			margin: 0 0 20px 0;
 		}
 	}
 
