--- a/app/scss/components/sidebar-brands.scss
+++ b/app/scss/components/sidebar-brands.scss
@@ -1,4 +1,4 @@
-.sidebar-brands {
+.sidebar-checkboxes {
 	padding: 20px;
 	background-color: #ffffff;
 	border-radius: 5px;
@@ -13,4 +13,87 @@
 		padding: 0px 0px 20px 0px;	
 		border-bottom: 1px solid #dddddd;
 	}
+
 }
+
+/* ==========================================================================
+ Checkbox
+========================================================================== */
+.label {
+	display: block;
+	position: relative;
+	padding-left: 35px;
+	cursor: pointer;
+	color: #888888;
+	font-size: 13px;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+
+	&:not(:last-child) {
+		margin: 0px 0px 20px 0px;
+	}
+
+	&:hover {
+		color: #333333;
+	}
+
+	span {
+		color: #e12121;
+		font-size: 10px;
+	}
+ }
+ 
+ /* Hide the browser's default radio button */
+ .label input {
+	position: absolute;
+	opacity: 0;
+	cursor: pointer;
+	height: 0;
+	width: 0;
+ }
+ 
+ /* Create a custom radio button */
+ .checkmark {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 12px;
+	height: 12px;
+	border-radius: 3px;
+	border: 1px solid #dddddd;
+	background-color: #ffffff;
+ }
+ 
+ /* On mouse-over, add a grey background color */
+ .label:hover input ~ .checkmark {
+	border-color: #333333;
+ }
+ 
+ /* When the radio button is checked, add a blue background */
+ .label input:checked ~ .checkmark {
+	background-color: #333333;
+ }
+ 
+ /* Create the indicator (the dot/circle - hidden when not checked) */
+ .checkmark:after {
+	content: "";
+	position: absolute;
+	display: none;
+ }
+ 
+ /* Show the indicator (dot/circle) when checked */
+ .label input:checked ~ .checkmark:after {
+	display: block;
+ }
+ 
+ /* Style the indicator (dot/circle) */
+ .label .checkmark:after {
+	top: 10px;
+	left: 8px;
+	width: 9px;
+	height: 9px;
+	border-radius: 50%;
+	background: white;
+ }
