--- a/app/scss/components/toolbar.scss
+++ b/app/scss/components/toolbar.scss
@@ -7,6 +7,10 @@
 		justify-content: space-between;
 		border-bottom: 1px solid #dddddd;
 		padding: 0px 0px 20px 0px;
+
+		@media (max-width: 768px) {
+			padding: 0px 0px 10px 0px;
+		}
 	}
 
 	// .toolbar__sort-icon
