--- a/app/scss/blocks/contact-us.scss
+++ b/app/scss/blocks/contact-us.scss
@@ -1,5 +1,13 @@
 .contact-us {
 	padding: 40px 0px;
+
+	@media (max-width: 768px) {
+		padding: 30px 0px;
+	}
+
+	@media (max-width: 480px) {
+		padding: 20px 0px;
+	}
 	// .contact-us__row
 
 	&__row {
@@ -24,8 +32,12 @@
 		color: #333333;
 		font-size: 40px;
 		font-weight: 900;
-		line-height: 22px;
+		line-height: 42px;
 		margin: 0px 0px 30px 0px;
+
+		@media (max-width: 768px) {
+			margin: 0 0 20px 0;
+		}
 	}
 
 	// .contact-us__contact-descr
@@ -36,6 +48,14 @@
 		font-weight: 400;
 		line-height: 22px;
 		margin: 0px 0px 45px 0px;
+
+		@media (max-width: 768px) {
+			margin: 0 0 30px 0;
+		}
+
+		@media (max-width: 480px) {
+			margin: 0 0 20px 0;
+		}
 	}
 
 	// .contact-us__offices
@@ -95,7 +115,7 @@
 
 		@media (max-width: 550px) {
 			flex-direction: column;
-			margin: -10px 0px -10px 0px;
+			margin: -5px 0px -5px 0px;
 		}
 	}
 
@@ -123,7 +143,7 @@
 		}
 
 		@media (max-width: 550px) {
-			padding: 10px 0px 10px 0px;
+			padding: 5px 0px 5px 0px;
 		}
 	}
 
@@ -206,10 +226,22 @@
 	&__map {
 		margin: 0px 0px 50px 0px;
 
+		@media (max-width: 768px) {
+			margin: 0px 0px 30px 0px;
+		}
+
+		@media (max-width: 480px) {
+			margin: 0px 0px 20px 0px;
+		}
+
 		iframe {
 			height: 605px;
 			width: 100%;
 			border: 5px solid #fff;
+
+			@media (max-width: 1366px) {
+				height: 500px;
+			}
 		}
 	}
 
@@ -227,6 +259,10 @@
 		line-height: 22px;
 		text-transform: uppercase;
 		margin: 0px 0px 30px 0px;
+
+		@media (max-width: 480px) {
+			margin: 0 0 15px 0;
+		}
 	}
 
 	// .contact-us__message-form
@@ -298,6 +334,10 @@
 		height: 151px;
 		border: 1px solid #dddddd;
 		margin: 0px 0px 30px 0px;
+
+		@media (max-width: 480px) {
+			margin: 0 0 15px 0;
+		}
 	}
 
 	// .contact-us__message-btn
