--- a/app/scss/blocks/contact.scss
+++ b/app/scss/blocks/contact.scss
@@ -1,5 +1,13 @@
 .contact {
 	padding: 40px 0px;
+
+	@media (max-width: 768px) {
+		padding: 30px 0px;
+	}
+
+	@media (max-width: 480px) {
+		padding: 20px 0px;
+	}
 	// .contact__row
 
 	&__row {
@@ -7,7 +15,7 @@
 		margin: 0px -15px 0px -15px;
 		
 		@media (max-width: 768px) {
-			flex-direction: column;
+			flex-direction: column-reverse;
 		}
 	}
 
@@ -25,6 +33,12 @@
 		font-size: 30px;
 		font-weight: 900;
 		margin: 0px 0px 30px 0px;
+
+		@media (max-width: 1366px) {
+			margin: 0 0 20px 0;
+		}
+
+
 	}
 
 	// .contact__descr
@@ -35,12 +49,35 @@
 		font-weight: 400;
 		line-height: 22px;
 		margin: 0px 0px 45px 0px;
+
+		@media (max-width: 1366px) {
+			margin: 0px 0 30px 0;
+		}
+
+		@media (max-width: 768px) {
+			margin: 0px 0 20px 0;
+		}
 	}
 
 	&__offices {
 		margin: 0px 0px 50px 0px;
 		padding: 0px 0px 50px 0px;
 		border-bottom: 1px solid #dddddd;
+
+		@media (max-width: 1366px) {
+			margin: 0px 0px 40px 0px;
+			padding: 0px 0px 40px 0px;
+		}
+
+		@media (max-width: 768px) {
+			margin: 0px 0px 30px 0px;
+			padding: 0px 0px 30px 0px;
+		}
+
+		@media (max-width: 480px) {
+			margin: 0px 0px 20px 0px;
+			padding: 0px 0px 20px 0px;
+		}
 	}
 
 	// .contact__offices-row
@@ -49,6 +86,15 @@
 		display: flex;
 		justify-content: center;
 		margin: 0px -20px;
+
+		@media (max-width: 1366px) {
+			margin: 0px -10px;
+		}
+
+		@media (max-width: 500px) {
+			flex-direction: column;
+			margin: -10px 0px;
+		}
 	}
 
 	// .contact__offices-column
@@ -57,12 +103,27 @@
 		text-align: center;
 		flex: 0 1 30%;
 		padding: 0px 20px;
+
+		@media (max-width: 1366px) {
+			padding: 0px 10px;
+		}
+
+		@media (max-width: 500px) {
+			display: flex;
+			text-align: left;
+			padding: 10px 0px;
+		}
 	}
 
 	// .contact__offices-img
 
 	&__offices-img {
 		margin: 0px 0px 5px 0px;
+
+		@media (max-width: 500px) {
+			margin: 0px 10px 0px 0px;
+			width: 40px;
+		}
 	}
 
 	// .contact__offices-name
@@ -73,6 +134,10 @@
 		font-weight: 600;
 		line-height: 22px;
 		margin: 0px 0px 15px 0px;
+
+		@media (max-width: 1366px) {
+			margin: 0 0 5px 0;
+		}
 	}
 
 	// .contact__offices-link
@@ -97,6 +162,14 @@
 		font-weight: 900;
 		text-transform: uppercase;
 		margin: 0px 0px 30px 0px;
+
+		@media (max-width: 768px) {
+			margin: 0 0 25px 0;
+		}
+
+		@media (max-width: 480px) {
+			margin: 0 0 20px 0;
+		}
 	}
 
 	// .contact__message-form
@@ -154,6 +227,14 @@
 		height: 151px;
 		border: 1px solid #dddddd;
 		margin: 0px 0px 30px 0px;
+
+		@media (max-width: 768px) {
+			margin: 0 0 25px 0;
+		}
+
+		@media (max-width: 480px) {
+			margin: 0 0 20px 0;
+		}
 	}
 
 	// .contact__message-btn
@@ -180,9 +261,21 @@
 		margin: 0px 0px 50px 0px;
 		border: 5px solid #fff;
 
+		@media (max-width: 768px) {
+			margin: 0px 0px 30px 0px;
+		}
+
+		@media (max-width: 480px) {
+			margin: 0px 0px 20px 0px;
+		}
+
 		iframe {
 			height: 615px;
 			width: 100%;
+
+			@media (max-width: 1366px) {
+				height: 500px;
+			}
 		}
 	}
 }
