--- a/app/scss/blocks/about.scss
+++ b/app/scss/blocks/about.scss
@@ -1,11 +1,29 @@
 .about {
 	padding: 50px 0px 0px 0px;
+
+	@media (max-width: 1366px) {
+		padding: 30px 0px 0px 0px;
+	}
+
+	@media (max-width: 768px) {
+		padding: 20px 0px 0px 0px;
+	}
 	// .about__content
 
 	&__content {
 		margin: 0px 0px 50px 0px;
 		padding: 0px 0px 50px 0px;
 		border-bottom: 1px solid #dddddd;
+
+		@media (max-width: 1366px) {
+			margin: 0px 0px 30px 0px;
+			padding: 0px 0px 30px 0px;
+		}
+
+		@media (max-width: 480px) {
+			margin: 0px 0px 20px 0px;
+			padding: 0px 0px 20px 0px;
+		}
 	}
 
 	// .about__title
@@ -17,6 +35,10 @@
 		color: #333333;
 		margin: 0px 0px 30px 0px;
 
+		@media (max-width: 550px) {
+			margin: 0 0 15px 0;
+		}
+
 		span {
 			color: #c91212;
 		}
@@ -27,6 +49,10 @@
 	&__descr {
 		display: flex;
 		margin: 0px -15px;
+
+		@media (max-width: 550px) {
+			flex-direction: column;
+		}
 	}
 
 	// .about__descr-text
@@ -41,7 +67,7 @@
 			font-weight: 400;
 			line-height: 25px;
 
-			@media (max-width: 1300px) {
+			@media (max-width: 768px) {
 				line-height: 20px;
 			}
 
@@ -52,7 +78,7 @@
 			&:not(:last-child) {
 				padding: 0px 0px 20px 0px;
 
-				@media (max-width: 1300px) {
+				@media (max-width: 768px) {
 					padding: 0 0 10px 0;
 				}
 			}
@@ -70,20 +96,17 @@
 			}
 		}
 	}
-
-	// .about__choose-us
-
-	&__choose-us {
-	}
-
-	// .about__our-team
-
-	&__our-team {
-	}
-
 	// .about__sponsor
 
 	&__sponsor {
 		padding: 50px 0px 70px;
+
+		@media (max-width: 1366px) {
+			padding: 30px 0px 50px;
+		}
+
+		@media (max-width: 550px) {
+			padding: 20px 0 30px;
+		}
 	}
 }
