--- a/app/scss/components/choose-us.scss
+++ b/app/scss/components/choose-us.scss
@@ -2,6 +2,16 @@
 	margin: 0px 0px 50px 0px;
 	padding: 0px 0px 50px 0px;
 	border-bottom: 1px solid #dddddd;
+
+	@media (max-width: 1366px) {
+		margin: 0px 0px 30px 0px;
+		padding: 0px 0px 30px 0px;
+	}
+
+	@media (max-width: 480px) {
+		margin: 0px 0px 20px 0px;
+		padding: 0px 0px 20px 0px;
+	}
 	// .choose-us__row
 
 	&__row {
@@ -32,7 +42,7 @@
 			display: flex;
 		}
 		
-		@media (max-width: 768px) {
+		@media (max-width: 550px) {
 			display: block;
 		}
 		
@@ -46,14 +56,19 @@
 		overflow: hidden;
 		position: relative;
 
-		@media (max-width: 1000px) {
-			flex: 0 0 40%;
-			min-height: 150px;
-			margin: 0px 20px 0px 0px;
-			padding: 0;
+		@media (max-width: 1366px) {
+			margin: 0px 0px 20px 0px;
+			padding: 0px 0px 50% 0px;
 		}
 
-		@media (max-width: 768px) {
+		@media (max-width: 1000px) {
+			flex: 0 0 44%;
+			min-height: 150px;
+			padding: 0;
+			margin: 0px 20px 0px 0px;
+		}
+
+		@media (max-width: 550px) {
 			padding: 0px 0px 54.4% 0px;
 			margin: 0px 0px 20px 0px;
 		}
@@ -72,6 +87,10 @@
 
 	&__item-body {
 		text-align: center;
+
+		@media (max-width: 1000px) {
+			text-align: left;
+		}
 	}
 
 	// .choose-us__item-title
@@ -84,8 +103,12 @@
 		margin: 0px 0px 30px 0px;
 		transition: color .3s;
 
-		@media (max-width: 600px) {
+		@media (max-width: 1366px) {
 			margin: 0px 0px 15px 0px;
+		}
+
+		@media (max-width: 480px) {
+			margin: 0px 0px 10px 0px;
 		}
 
 		&:hover {
@@ -101,6 +124,11 @@
 		font-weight: 400;
 		line-height: 25px;
 		margin: 0px 0px 30px 0px;
+
+		@media (max-width: 1366px) {
+			margin: 0px 0px 20px 0px;
+			line-height: 22px;
+		}
 
 		@media (max-width: 600px) {
 			margin: 0px 0px 15px 0px;
