--- a/app/scss/components/our-team.scss
+++ b/app/scss/components/our-team.scss
@@ -1,5 +1,13 @@
 .our-team {
 	padding: 0px 0px 70px 0px;
+
+	@media (max-width: 1366px) {
+		padding: 0px 0px 50px 0px;
+	}
+
+	@media (max-width: 768px) {
+		padding: 0px 0px 30px 0px;
+	}
 	// .our-team__title
 
 	&__title {
@@ -7,6 +15,10 @@
 		font-size: 30px;
 		font-weight: 800;
 		margin: 0px 0px 30px 0px;
+
+		@media (max-width: 550px) {
+			margin: 0 0 15px 0;
+		}
 	}
 
 	// .our-team__row
@@ -40,7 +52,7 @@
 			flex: 0 1 50%;	
 		}
 
-		@media (max-width: 480px) {
+		@media (max-width: 450px) {
 			flex: 0 1 100%;	
 		}
 	}
@@ -52,6 +64,14 @@
 		padding: 0px 0px 100% 0px;
 		overflow: hidden;
 		position: relative;
+
+		@media (max-width: 550px) {
+			margin: 0 0 15px 0;
+		}
+
+		@media (max-width: 450px) {
+			padding: 0 0 75% 0;
+		}
 		
 		img {
 			width: 100%;
@@ -70,6 +90,10 @@
 		font-weight: 400;
 		color: #333333;
 		margin: 0px 0px 25px 0px;
+
+		@media (max-width: 550px) {
+			margin: 0 0 15px 0;
+		}
 
 		span {
 			color: #888888;
