--- a/app/scss/blocks/blog-list.scss
+++ b/app/scss/blocks/blog-list.scss
@@ -1,8 +1,16 @@
 .blog-list {
 	padding: 45px 0px 80px;
 
-	@media (max-width: 768px) {
-		padding: 40px 0;
+	@media (max-width: 1366px) {
+		padding: 30px 0px 60px;
+	}
+
+	@media (max-width: 1000px) {
+		padding: 30px 0px 30px;
+	}
+
+	@media (max-width: 480px) {
+		padding: 20px 0px 20px;
 	}
 	// .blog-list__body
 
@@ -10,7 +18,7 @@
 		display: flex;
 		margin: 0px -15px;
 
-		@media (max-width: 768px) {
+		@media (max-width: 1000px) {
 			flex-direction: column;
 		}
 	}
@@ -18,7 +26,7 @@
 	// .blog-list__content
 
 	&__content {
-		flex: 0 1 85%;
+		flex: 0 1 83.3%;
 		padding: 0px 15px;
 		display: flex;
 		flex-direction: column;
@@ -47,6 +55,14 @@
 	&__more {
 		text-align: center;
 		margin: 65px 0px 0px 0px;
+
+		@media (max-width: 1366px) {
+			margin: 50px 0px 0px 0px;
+		}
+
+		@media (max-width: 768px) {
+			margin: 40px 0px 0px 0px;
+		}
 	}
 
 	&__more-btn {
@@ -70,6 +86,10 @@
 		flex: 0 1 50%;
 		padding: 25px 15px;
 
+		@media (max-width: 768px) {
+			padding: 15px 15px;
+		}
+
 		@media (max-width: 600px) {
 			flex: 0 1 100%;
 		}
@@ -79,9 +99,48 @@
 			padding: 0;
 		}
 
+		.blog-list__item-body {
+			margin: 0;
+		}
+
+		.blog-list__item-title {
+			margin: 0 0 15px 0;
+
+			@media (max-width: 1000px) {
+				font-size: 18px;
+				line-height: 20px;
+				margin: 0 0 10px 0;
+			}
+		}
+
+		.blog-list__item-descr {
+
+			@media (max-width: 1000px) {
+				margin: 0 0 15px 0;
+			}
+		}
+
+		.blog-list__item-date {
+			margin: 0 0 20px 0;
+
+			@media (max-width: 1000px) {
+				margin: 0 0 10px 0;
+			}
+		}
+
 		.blog-list__item-img {
 			height: 0px;
 			padding: 0 0 65% 0px;
+
+			@media (max-width: 1366px) {
+				padding: 0 0 55% 0px;
+				margin: 0px 0px 20px 0px;
+			}
+
+			@media (max-width: 1000px) {
+				padding: 0 0 55% 0px;
+				margin: 0px 0px 10px 0px;
+			}
 		}
 		
 		.blog-list__item {
@@ -260,23 +319,58 @@
 	// .blog-list__sidebar
 
 	&__sidebar {
-		flex: 0 1 15%;
+		flex: 1 1 16.7%;
+		min-width: 250px;
 		padding: 0px 15px;
 		display: flex;
 		flex-direction: column;
 		
-		@media (max-width: 768px) {
+		@media (max-width: 1000px) {
 			margin: 50px 0px 0px 0px;
 			flex-flow: row wrap;
 			justify-content: space-between;
-
-			&>div {
-				flex: 0 1 48%;
-			}
 		}
 
 		@media (max-width: 560px) {
 			flex-direction: column;
+		}
+	}
+
+	&__sidebar-search,
+	&__sidebar-categories,
+	&__sidebar-tags,
+	&__sidebar-post {
+		margin: 0px 0px 50px 0px;
+
+		@media (max-width: 1400px) {
+			margin: 0px 0px 40px 0px;
+		}
+
+		@media (max-width: 1000px) {
+			flex: 0 1 48%;
+			margin: 0 0 30px 0;
+		}
+
+		@media (max-width: 480px) {
+			margin: 0 0 20px 0;
+		}
+	}
+
+	&__sidebar-search {
+
+		@media (max-width: 1000px) {
+			display: none;
+		}
+	}	
+
+	&__sidebar-block {
+
+		@media (max-width: 1000px) {
+			flex: 0 1 100%;
+			
+			img {
+				height: 150px;
+			}
 		}
 	}
 }
