--- a/app/scss/components/sidebar-categories.scss
+++ b/app/scss/components/sidebar-categories.scss
@@ -1,20 +1,13 @@
 .sidebar-categories {
-	// .sidebar-categories__title
-
-	&__title {
-
-	}
-
-	// .sidebar-categories__list
-
-	&__list {
-		margin: 0px 0px 50px 0px;
-	}
 
 	// .sidebar-categories__item
 
 	&__item:not(:last-child) {
 		margin: 0px 0px 20px 0px;
+
+		@media (max-width: 1366px) {
+			margin: 0px 0px 10px 0px;
+		}
 	}
 
 	// .sidebar-categories__link
