--- a/app/scss/components/sidebar-search.scss
+++ b/app/scss/components/sidebar-search.scss
@@ -7,13 +7,13 @@
 		border-radius: 5px;
 		background-color: #ffffff;
 		background-color: #f2f2f2;
-		margin: 0px 0px 50px 0px;
 	}
 
 	// .sidebar-search__form-text
 
 	&__form-text {
 		height: 50px;
+		max-width: 182px;
 		padding: 20px;
 		border-radius: 5px 0 0 5px;
 	}
@@ -26,5 +26,10 @@
 		width: 50px;
 		height: 50px;
 		border-radius: 0 5px 5px 0;
+		transition: background-color .3s;
+
+		&:hover {
+			background-color: #e12121;
+		}
 	}
 }
