--- a/app/scss/blocks/news.scss
+++ b/app/scss/blocks/news.scss
@@ -19,29 +19,29 @@
 
 	&__row {
 		display: flex;
+		margin: 0px -15px;
 
-		@media (max-width: 1300px) {
+		@media (max-width: 1000px) {
 			flex-direction: column;
 		}
 	}
 
 	&__column {
 		flex: 0 1 33.333%;
-
-
-
-	}
-
-	// .news__slider
-
-	&__slider {
-		margin: 0px -15px;
+		padding: 0px 15px;
 	}
 
 	// .news__item
 
 	&__item {
-		padding: 0px 15px;
+
+		@media (max-width: 1000px) {
+			display: flex;
+		}
+
+		@media (max-width: 500px) {
+			flex-direction: column;
+		}
 	}
 
 	// .news__item-image
@@ -51,6 +51,18 @@
 		padding: 0px 0px 66.7% 0px;
 		overflow: hidden;
 		position: relative;
+
+		@media (max-width: 1000px) {
+			padding: 0px 0px 0px 0px;
+			flex: 0 0 45%;
+			height: 200px;
+			margin: 0px 15px 30px 0px;
+		}
+
+		@media (max-width: 500px) {
+			margin: 0px 0px 15px 0px;
+			padding: 0px 0px 40% 0px;
+		}
 
 		img {
 			width: 100%;
