--- a/app/scss/components/about-author.scss
+++ b/app/scss/components/about-author.scss
@@ -7,6 +7,10 @@
 		padding: 20px;
 		border-radius: 5px;
 		background-color: #ffffff;
+
+		@media (max-width: 768px) {
+			padding: 15px;
+		}
 	}
 
 	// .about-author__img
@@ -19,6 +23,21 @@
 			height: 120px;
 			border-radius: 50%;
 			object-fit: cover;
+
+			@media (max-width: 768px) {
+				width: 100px;
+				height: 100px;
+			}
+
+			@media (max-width: 500px) {
+				width: 80px;
+				height: 80px;
+			}
+
+			@media (max-width: 350px) {
+				width: 50px;
+				height: 50px;
+			}
 		}
 
 	}
@@ -32,6 +51,14 @@
 		line-height: 25px;
 		text-transform: uppercase;
 		margin: 0px 0px 20px 0px;
+
+		@media (max-width: 768px) {
+			margin: 0 0 10px 0;
+		}
+
+		@media (max-width: 768px) {
+			margin: 0 0 0px 0;
+		}
 	}
 
 	// .about-author__content-text
@@ -41,5 +68,13 @@
 		font-size: 13px;
 		font-weight: 400;
 		line-height: 25px;
+
+		@media (max-width: 768px) {
+			line-height: 22px;
+		}
+
+		@media (max-width: 500px) {
+			line-height: 18px;
+		}
 	}
 }
