--- a/app/scss/components/blog-single.scss
+++ b/app/scss/components/blog-single.scss
@@ -8,6 +8,22 @@
 		overflow: hidden;
 		position: relative;
 
+		@media (max-width: 1600px) {
+			padding: 0px 0px 50% 0px;
+		}
+
+		@media (max-width: 1400px) {
+			padding: 0px 0px 40% 0px;
+		}
+
+		@media (max-width: 768px) {
+			margin: 0px 0px 25px 0px;
+		}
+
+		@media (max-width: 480px) {
+			margin: 0px 0px 20px 0px;
+		}
+
 		img {
 			width: 100%;
 			height: 100%;
@@ -22,9 +38,17 @@
 
 	&__title {
 		color: #333333;
-		font-size: 30px;
+		@include adaptive-font(30,22);
 		font-weight: 800;
 		margin: 0px 0px 30px 0px;
+
+		@media (max-width: 768px) {
+			margin: 0px 0px 25px 0px;
+		}
+
+		@media (max-width: 480px) {
+			margin: 0px 0px 20px 0px;
+		}
 	}
 
 	// .blog-single__date
@@ -34,12 +58,14 @@
 		font-size: 13px;
 		font-weight: 400;
 		margin: 0px 0px 30px 0px;
-	}
 
-	// .blog-single__descr
+		@media (max-width: 768px) {
+			margin: 0px 0px 25px 0px;
+		}
 
-	&__descr {
-		
+		@media (max-width: 480px) {
+			margin: 0px 0px 20px 0px;
+		}
 	}
 
 	// .blog-single__descr-text
@@ -48,6 +74,10 @@
 		color: #888888;
 		line-height: 25px;
 		margin: 0px 0px 25px 0px;
+
+		@media (max-width: 480px) {
+			margin: 0px 0px 20px 0px;
+		}
 	}
 
 	// .blog-single__descr-warning
@@ -59,6 +89,10 @@
 		border-left: 3px solid #e12121;
 		padding: 0px 0px 0px 15px;
 		margin: 0px 0px 30px 0px;
+
+		@media (max-width: 480px) {
+			margin: 0px 0px 20px 0px;
+		}
 	}
 
 	// .blog-single__descr-quote
@@ -72,10 +106,32 @@
 		line-height: 25px;
 		margin: 0px 0px 30px 0px;
 
+		@media (max-width: 768px) {
+			flex-direction: column;
+		}
+
+		@media (max-width: 480px) {
+			margin: 0px 0px 20px 0px;
+		}
+
 		span {
 			flex: 0 1 48.6%;
 			padding: 20px;
 			background: #EAEAEA;
+
+			@media (max-width: 768px) {
+				
+				&:first-child {
+					margin: 0 0 25px 0;
+				}
+			}
+
+			@media (max-width: 480px) {
+				
+				&:first-child {
+					margin: 0 0 20px 0;
+				}
+			}
 		}
 	}
 
@@ -87,6 +143,20 @@
 		margin: 0px 0px 30px 0px;
 		padding: 0px 0px 30px 0px;
 		border-bottom: 1px solid #dddddd;
+
+		@media (max-width: 768px) {
+			margin: 0 0 25px 0;
+			padding: 0px 0 25px 0;
+		}
+
+		@media (max-width: 480px) {
+			margin: 0 0 20px 0;
+			padding: 0px 0 20px 0;
+		}
+
+		@media (max-width: 360px) {
+			flex-direction: column;
+		}
 	}
 
 	// .blog-single__tags-list
@@ -94,6 +164,10 @@
 	&__tags-list {
 		display: flex;
 		align-items: center;
+
+		@media (max-width: 360px) {
+			margin: 0px 0px 10px 0px;
+		}
 	}
 
 	// .blog-single__tags-item
