--- a/app/scss/components/comments.scss
+++ b/app/scss/components/comments.scss
@@ -4,6 +4,14 @@
 
 	&__title {
 		margin: 0px 0px 50px 0px;
+
+		@media (max-width: 1366px) {
+			margin: 0px 0px 30px 0px;
+		}
+
+		@media (max-width: 768px) {
+			margin: 0px 0px 20px 0px;
+		}
 	}
 
 	// .comments__comment
@@ -13,12 +21,46 @@
 		margin: 0px 0px 30px 0px;
 		padding: 0px 0px 30px 0px;
 
+		@media (max-width: 768px) {
+			margin: 0px 0px 20px 0px;
+			padding: 0px 0px 20px 0px;
+		}
+
+		@media (max-width: 550px) {
+			margin: 0px 0px 15px 0px;
+			padding: 0px 0px 15px 0px;
+		}
+
 		&:nth-child(3) {
 			margin: 0px 0px 30px 110px;
+
+			@media (max-width: 768px) {
+				margin: 0px 0px 20px 80px;
+			}
+
+			@media (max-width: 550px) {
+				margin: 0px 0px 15px 50px;
+			}
+
+			@media (max-width: 450px) {
+				margin: 0px 0px 15px 30px;
+			}
 		}
 
 		&:nth-child(4) {
 			margin: 0px 0px 30px 230px;
+
+			@media (max-width: 768px) {
+				margin: 0px 0px 20px 160px;
+			}
+
+			@media (max-width: 550px) {
+				margin: 0px 0px 15px 110px;
+			}
+
+			@media (max-width: 450px) {
+				margin: 0px 0px 15px 50px;
+			}
 		}
 
 		&:not(:last-child) {
@@ -35,18 +77,29 @@
 			width: 100px;
 			height: 100px;
 			border-radius: 50%;
+
+			@media (max-width: 768px) {
+				width: 80px;
+				height: 80px;
+			}
+
+			@media (max-width: 480px) {
+				width: 60px;
+				height: 60px;
+			}
+
+			@media (max-width: 450px) {
+				width: 50px;
+				height: 50px;
+			}
 		}
-	}
-
-	// .comments__comment-content
-
-	&__comment-content {
 	}
 
 	// .comments__comment-header
 
 	&__comment-header {
 		display: flex;
+		flex-flow: row wrap;
 		font-size: 13px;
 		font-weight: 400;
 		margin: 0px 0px 10px 0px;
@@ -76,5 +129,15 @@
 	&__comment-text {
 		color: #888888;
 		line-height: 25px;
+
+		@media (max-width: 1366px) {
+			font-size: 15px;
+			line-height: 23px;
+		}
+
+		@media (max-width: 1366px) {
+			font-size: 14px;
+			line-height: 20px;
+		}
 	}
 }
