--- a/app/scss/components/sidebar-search.scss
+++ b/app/scss/components/sidebar-search.scss
@@ -13,7 +13,7 @@
 
 	&__form-text {
 		height: 50px;
-		max-width: 182px;
+		width: 100%;
 		padding: 20px;
 		border-radius: 5px 0 0 5px;
 	}
@@ -23,7 +23,7 @@
 	&__form-btn {
 		background-color: #333333;
 		color: #fff;
-		width: 50px;
+		min-width: 50px;
 		height: 50px;
 		border-radius: 0 5px 5px 0;
 		transition: background-color .3s;
