--- a/app/scss/blocks/blog-list.scss
+++ b/app/scss/blocks/blog-list.scss
@@ -279,6 +279,15 @@
 		font-size: 13px;
 		line-height: 22px;
 		margin: 0px 0px 30px 0px;
+
+		a {
+			color: #888888;
+			transition: color .3s;
+
+			&:hover {
+				color: #e12121;
+			}
+		}
 	}
 
 	// .blog-list__item-descr
