Add content and img for main page

--- a/app/scss/blocks/special-product.scss
+++ b/app/scss/blocks/special-product.scss
@@ -179,7 +179,7 @@
 
 	&__image {
 		margin: 0px 0px 15px 0px;
-		background: url("../../img/special-product/red.webp");
+		background: url("../img/special-product/red.webp");
 		background-size: contain;
 		background-position: center;
 		background-repeat: no-repeat;
