--- a/app/scss/blocks/main-slider.scss
+++ b/app/scss/blocks/main-slider.scss
@@ -10,20 +10,24 @@
 
 	&__image {
 		position: relative;
-		padding: 0px 0px 19% 0px;
+		padding: 0px 0px 36% 0px;
 		overflow: hidden;
 		background-color: rgba(0, 0, 0, 0.1);
 
 		@media (max-width: 1500px) {
-			padding: 0px 0px 10% 0px;
+			padding: 0px 0px 30% 0px;
 		}
 
 		@media (max-width: 1366px) {
-			padding: 0px 0px 0% 0px;
+			padding: 0 0 20% 0;
+		}
+
+		@media (max-width: 768px) {
+			padding: 0 0 40% 0;
 		}
 
 		@media (max-width: 480px) {
-			padding: 10%;
+			padding: 0 0 60% 0;
 		}
 
 		img {
