--- a/app/scss/blocks/news.scss
+++ b/app/scss/blocks/news.scss
@@ -31,9 +31,14 @@
 		padding: 0px 15px;
 	}
 
+	&__slider {
+		margin: 0px -15px;
+	}
+
 	// .news__item
 
 	&__item {
+		padding: 0px 15px;
 
 		@media (max-width: 1000px) {
 			display: flex;
