--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -70,6 +70,7 @@
 @import "components/leave-comment";
 @import "components/choose-us";
 @import "components/our-team";
+@import "components/news-related";
 @import "components/tabs";
 @import "components/cart-detail";
 @import "components/quantity";
