--- a/app/scss/blocks/news.scss
+++ b/app/scss/blocks/news.scss
@@ -20,10 +20,6 @@
 	&__row {
 		display: flex;
 		margin: 0px -15px;
-
-		@media (max-width: 1000px) {
-			flex-direction: column;
-		}
 	}
 
 	&__column {
@@ -33,6 +29,10 @@
 
 	&__slider {
 		margin: 0px -15px;
+
+		@media (max-width: 1000px) {
+			margin: 0px -10px;
+		}
 	}
 
 	// .news__item
@@ -41,11 +41,7 @@
 		padding: 0px 15px;
 
 		@media (max-width: 1000px) {
-			display: flex;
-		}
-
-		@media (max-width: 500px) {
-			flex-direction: column;
+			padding: 0px 10px;
 		}
 	}
 
@@ -58,15 +54,7 @@
 		position: relative;
 
 		@media (max-width: 1000px) {
-			padding: 0px 0px 0px 0px;
-			flex: 0 0 45%;
-			height: 200px;
-			margin: 0px 15px 30px 0px;
-		}
-
-		@media (max-width: 500px) {
 			margin: 0px 0px 15px 0px;
-			padding: 0px 0px 40% 0px;
 		}
 
 		img {
@@ -101,16 +89,28 @@
 			font-size: 20px;
 		}
 
-		@media (max-width: 700px) {
+		@media (max-width: 1000px) {
 			font-size: 17px;
 		}
 
-		@media (max-width: 600px) {
+		@media (max-width: 900px) {
+			font-size: 20px;
+		}
+
+		@media (max-width: 700px) {
+			font-size: 15px;
+		}
+
+		@media (max-width: 700px) {
 			font-size: 25px;
 		}
 
-		@media (max-width: 400px) {
-			font-size: 18px;
+		@media (max-width: 450px) {
+			font-size: 20px;
+		}
+
+		@media (max-width: 380px) {
+			font-size: 15px;
 		}
 
 		span {
@@ -130,14 +130,36 @@
 		margin: 0px 0px 20px 0px;
 		transition: color .3s;
 
+		@media (max-width: 768px) {
+			margin: 0px 0px 15px 0px;
+		}
+
+		@media (max-width: 480px) {
+			margin: 0px 0px 10px 0px;
+		}
+
 		&:hover {
 			color: #e12121;
 		}
 
 		span {
+			position: relative;
 			color: #888888;
 			font-size: 13px;
 			line-height: 22px;
+			margin: 0 7px 0 0;
+			 padding: 0 0 0 14px;
+			 
+			&::before {
+				content: "";
+				position: absolute;
+				height: 13px;
+				width: 2px;
+				margin: 0 0 0 7px;
+				background: #888;
+				left: 0;
+				top: 3px;
+			}
 		}
 	}
 
@@ -156,6 +178,14 @@
 		display: -webkit-box;
 		-webkit-line-clamp: 2;
 		-webkit-box-orient: vertical;
+
+		@media (max-width: 768px) {
+			margin: 0px 0px 20px 0px;
+		}
+
+		@media (max-width: 480px) {
+			margin: 0px 0px 15px 0px;
+		}
 	}
 
 	// .news__item-btn
