--- a/app/scss/components/blog-single.scss
+++ b/app/scss/components/blog-single.scss
@@ -66,6 +66,47 @@
 		@media (max-width: 480px) {
 			margin: 0px 0px 20px 0px;
 		}
+
+		span {
+			position: relative;
+			margin: 0px 7px 0px 0px;
+			padding: 0px 0px 0px 14px;
+
+			&::before {
+				content: "";
+				position: absolute;
+				height: 12px;
+				width: 1px;
+				margin: 0px 0px 0px 7px;
+				background: #888888;
+				left: 0;
+				top: 3px;
+				transition: background .3s;
+			}
+		}
+	}
+
+	&__tag {
+		color: #888888;
+		text-transform: capitalize;
+		transition: color .3s;
+
+		&:hover {
+			color: #e12121;
+		}
+
+		&:not(:last-child) {
+			margin: 0px 5px 0px 0px;
+		}
+	}
+	
+
+	&__descr {
+
+		a {
+			text-decoration: underline;
+			color: #888888;
+		}
 	}
 
 	// .blog-single__descr-text
