--- a/app/scss/components/comments.scss
+++ b/app/scss/components/comments.scss
@@ -93,6 +93,28 @@
 				height: 50px;
 			}
 		}
+
+		svg {
+			border: 1px solid rgba(0,0,0,0.65);
+			border-radius: 50%;
+			width: 100px;
+			height: 100px;
+
+			@media (max-width: 768px) {
+				width: 80px;
+				height: 80px;
+			}
+
+			@media (max-width: 480px) {
+				width: 60px;
+				height: 60px;
+			}
+
+			@media (max-width: 450px) {
+				width: 50px;
+				height: 50px;
+			}
+		}
 	}
 
 	// .comments__comment-header
